Content: expand gratitude phrases set (playful, formal, culturally varied) and integrate into paddle messages

--- a/nothankyou.html
+++ b/nothankyou.html
@@ -224,28 +224,55 @@
 
             // Rotating gratitude phrases (always italicize "you")
             const gratitudePhrases = [
+                // Classic & friendly
                 "No, thank <em>you</em>!",
                 "Thank <em>you</em>, my friend.",
                 "I appreciate <em>you</em>.",
-                "Much obliged to <em>you</em>.",
-                "Cheers to <em>you</em>!",
-                "Grateful for <em>you</em>.",
                 "Right back at <em>you</em>!",
-                "The thanks go to <em>you</em>.",
-                "Couldn’t have done it without <em>you</em>.",
                 "Big thanks to <em>you</em>!",
                 "Many thanks to <em>you</em>.",
+                "Couldn't have done it without <em>you</em>.",
+                "This one's for <em>you</em>!",
+
+                // Playful & warm
+                "High five to <em>you</em>!",
+                "You're the best, thank <em>you</em>!",
+                "Awesome work by <em>you</em>!",
+                "Thanks a million to <em>you</em>!",
+                "Sending hugs to <em>you</em>!",
+                "Everything's better with <em>you</em>!",
+                "Virtual fist bump to <em>you</em>!",
+
+                // Formal & respectful
+                "Much obliged to <em>you</em>.",
+                "My sincere thanks to <em>you</em>.",
+                "I'm deeply grateful to <em>you</em>.",
+                "The honor is all <em>yours</em>.",
+                "My gratitude goes to <em>you</em>.",
+                "I commend <em>you</em>.",
+
+                // Culturally varied
+                "Merci to <em>you</em>!",
+                "Gracias to <em>you</em>!",
+                "Danke to <em>you</em>!",
+                "Arigato to <em>you</em>!",
+                "Grazie to <em>you</em>!",
+                "Toda raba to <em>you</em>!",
+                "Shukran to <em>you</em>!",
+                "Spasibo to <em>you</em>!",
+
+                // Creative & expressive
                 "All credit to <em>you</em>.",
                 "Hats off to <em>you</em>!",
                 "Kudos to <em>you</em>!",
-                "My thanks to <em>you</em>.",
-                "I’m grateful to <em>you</em>.",
-                "That’s very kind of <em>you</em>.",
-                "This one’s for <em>you</em>!",
+                "Cheers to <em>you</em>!",
+                "Grateful for <em>you</em>.",
+                "The thanks go to <em>you</em>.",
                 "Sending thanks to <em>you</em>.",
-                "Everything’s better with <em>you</em>."
-            ];
-            function getRandomPhrase() {
+                "That's very kind of <em>you</em>.",
+                "Blessings to <em>you</em>!",
+                "Much respect to <em>you</em>!"
+            ]; function getRandomPhrase() {
                 if (!Array.isArray(gratitudePhrases) || gratitudePhrases.length === 0) {
                     return "No, thank <em>you</em>!";
                 }
